fix: background color not showing

--- a/src/app/common/grade-icon/grade-icon.component.scss
+++ b/src/app/common/grade-icon/grade-icon.component.scss
@@ -10,11 +10,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.grade-icon.text-muted {
-  background-color: #6c757d !important;
-}
-.grade-icon .text-primary {
-  background-color: #007bff !important;
+  background-color: #333333 !important;
 }
